# tetris

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  mingw-toolchain.cmake
build-linux/: tetris
src/: GameLogic.cpp  GameLogic.h  Scene.cpp  Scene.h  main.cpp
